bin/tests/testPoint.out
*** -------------------------------------------------------------------------
*** Warning: UnitSquare has been deprecated in DOLFIN version 1.1.0.
*** The class UnitSquare has been replaced by UnitSquareMesh.
*** -------------------------------------------------------------------------

*** -------------------------------------------------------------------------
*** Warning: UnitInterval has been deprecated in DOLFIN version 1.1.0.
*** The class UnitInterval has been replaced by UnitIntervalMesh.
*** -------------------------------------------------------------------------

Solving linear system of size 242 x 242 (PETSc Krylov solver).
Solving linear system of size 6 x 6 (PETSc Krylov solver).
v_expr(0.5,0.2) = [ 0.58778525  6.50701379],   q_expr(0.5) = 0.587785252292
Traceback (most recent call last):
  File "testPoint.py", line 21, in <module>
    val_q = q(pq)
  File "/opt/libs/dolfin/1.2.0/gcc/4.8.0/lib/python2.7/site-packages/dolfin/functions/function.py", line 372, in __call__
    raise TypeError("expected scalar arguments for the coordinates")
TypeError: expected scalar arguments for the coordinates
